# recaller

./: .gitignore  .goreleaser.yaml  LICENSE  README.md  ansi.go  app.go  avl_node.go  avl_tree.go  avl_tree_test.go  bubbletea_app.go  cache.go  cache_test.go  colors.go  command_help.go  command_help_test.go  config.go  dateutil.go  dateutil_test.go  design.md  filetree_reader.go  fs_indexer.go  go.mod  go.sum  help.go  history_reader.go  history_tree.go  install.sh  instructions.md  main.go  process.go  quotes.go  shell-binding.md  verify.sh  version.go
.github/workflows/: release.yml
docs/: setup-bash.md  setup-zsh.md
recaller-rs/: .gitignore  Cargo.toml
recaller-rs/src/: banner.rs  cli.rs  commands.rs  config.rs  constants.rs  help.rs  history.rs  main.rs  platform.rs  state.rs  version.rs
recaller-rs/src/fs/: indexer.rs  mod.rs
recaller-rs/src/help_system/: cache.rs  manager.rs  mod.rs  parser.rs  runner.rs  strategy.rs
recaller-rs/src/help_system/strategies/: aws.rs  cargo.rs  docker.rs  generic.rs  git.rs  go_cmd.rs  kubectl.rs  man.rs  mod.rs  npm.rs  tldr.rs  utils.rs
recaller-rs/src/ui/: filesystem.rs  history.rs  mod.rs
strategies/: aws.go  cargo.go  docker.go  generic.go  git.go  go.go  interface.go  kubectl.go  man.go  manager.go  manager_test.go  npm.go  runner.go  tldr.go  utils.go
