[package]
name = "recaller-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
rustc_version_runtime = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"
arboard = "3.3"
crossterm = "0.27"
dashmap = "5.5"
indicatif = "0.17"
once_cell = "1.19"
parking_lot = "0.12"
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
regex = "1.10"
walkdir = "2.5"
shell-words = "1.1"
ureq = { version = "2.10", default-features = false, features = ["tls"] }
wait-timeout = "0.2"
which = "6.0"
